# TSOCS

./: CMakeLists.txt  README.md  launch.json
src/: CMakeLists.txt
src/lib/core/: CMakeLists.txt  CmakeLists.txt
src/lib/core/include/: TOC-ORBA.h  abstract_formulation.h  angle_formulation.h  basic_formulation.h  cost_functors.h  problem_solver.h  random_problem_generator.h  state_variables.h
src/lib/core/src/: TestMain.cpp  problem_solver.cpp  random_problem_generator.cpp
